# echo

./: .env.example  .gitignore  Cargo.toml  Dockerfile  README.md  TODO.txt  curl.txt  dev-start.sh  docker-compose.yml  prod-start.sh  stop.sh
.github/workflows/: publish-ghcr.yaml
echo-server/: Dockerfile  diesel.toml  prod-build.sh  start.sh
echo-server/migrations/2025-08-29-094151_add_track_gain_to_song/: down.sql
echo-server/src/constants/: middleware_constants.rs
info/apis/: echo-apis.txt
info/db/: schema.sql
migrations/2025-08-26-190231_initial_setup/: up.sql
migrations/2025-08-26-225254_add_is_admin_to_users/: down.sql  up.sql
migrations/2025-08-27-115951_songs_sftp/: down.sql  up.sql
migrations/2025-08-29-094151_add_track_gain_to_song/: up.sql
migrations/2025-08-29-105106_change_sftp_path_to_object_url/: down.sql  up.sql
migrations/2025-08-29-185001_remove_track_gain_from_songs/: down.sql
src/: db.rs  main.rs  schema.rs  sftp.rs
src/constants/: middleware_constants.rs  mod.rs
src/handlers/: album_handlers.rs  favorite_handlers.rs  mod.rs  playlist_handlers.rs  session_handlers.rs  song_handlers.rs  user_handlers.rs
src/middleware/: session_middleware.rs
src/models/: album_models.rs  favorite_models.rs  genre_models.rs  mod.rs  pagination_models.rs  playlist_models.rs  session_models.rs  song_models.rs  token_models.rs  user_models.rs
src/routes/: album_routes.rs  favorite_routes.rs  mod.rs  playlist_routes.rs  session_routes.rs  song_routes.rs  user_routes.rs
src/utils/: auth_utils.rs  file_utils.rs  mod.rs  token_utils.rs
(+9 files in other folders)
