[package]
name = "echo"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4"
serde = { version = "1.0", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.3", features = ["serde", "v4"] }
dotenv = "0.15.0"
tokio = "1.47.1"
diesel = { version = "2.2.0", features = ["mysql", "r2d2", "chrono"] }
rand = "0.8"
hex = "0.4"
bcrypt = "0.17.1"
